<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/brownishGrey"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightPink"
        android:ems="10"
        android:hint="@string/texthint"
        android:inputType="textPersonName"
        android:textColor="@color/lightPink"
        android:textColorHint="@color/darkGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar3"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="3"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar3">

        <Button
            android:id="@+id/editButton2"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_dialog"
            android:text="@string/editButton"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:background="@drawable/btn_dialog"
            android:text="@string/deleteButton"
            android:textColor="@color/coral" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>