<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="setting"
            type="com.andpjt.catchfood.activity.SettingActivity" />

        <variable
            name="vm"
            type="com.andpjt.catchfood.viewmodel.FoodViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlack"
        tools:context=".SetActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title3"
            android:textColor="@color/coral"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="15dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/texthint"
            android:text="@={vm.settingEditText}"
            android:inputType="textPersonName"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toStartOf="@+id/addButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <RatingBar
            android:id="@+id/ratingBar2"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="15dp"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="@{vm.settingRatingCount}"
            android:stepSize="1"
            android:theme="@style/RatingBar"
            app:layout_constraintEnd_toStartOf="@+id/addButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_add"
            android:includeFontPadding="false"
            android:text="@string/addButton"
            android:textColor="@color/darkGrey"
            android:textSize="15sp"
            android:onClick="@{setting::clickAddButton}"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/textView2"
            android:textColor="@color/lightPink"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/set_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cleanButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/cleanButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_add"
            android:text="@string/cleanButton"
            android:textColor="@color/darkGrey"
            android:textSize="16sp"
            android:onClick="@{setting::clickCleanButton}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>